syntax= "proto3";

package pb;

option go_package = "./pkg/pb";

service UserService {
    rpc CreateUser (CreateUserReq) returns (CreateUserRes){}
    rpc GetUser (UserReq) returns (UserRes){}
    rpc UpdateUser (User) returns (UserRes){}
    rpc DeleteUser (UserReq) returns (DeleteUserRes){}
}

service MethodService {
    rpc ListUsers (MethodReq) returns (MethodRes){}
}

message CreateUserReq {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone  = 4;
}

message CreateUserRes{
    int64 status = 1;
    string responseid=2;
    string error = 3;
}

message UserReq {
    string userid=1;
}

message User {
    uint32 ID=1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone  = 5;
}

message UserRes {
    int64 status = 1;
    string error = 2;
    User user=3;
}

message DeleteUserRes {
    int64 status = 1;
    string error = 2;
}

message MethodReq {
    int32 method=1;
    int32 waitTime=2;
}

message MethodRes {
    int32 status=1;
    repeated User user=2;
}